# learning-haskell

99-problems/: From21to28.hs  From31to41.hs  From46to50.hs  From54to60.hs  From61to69.hs  From70to73.hs
advent-of-code/1/: 1.hs
advent-of-code/2/: second.cabal
advent-of-code/2/src/: WithParsers.hs
advent-of-code/3/: 3.hs
advent-of-code/second/: 2.hs  second.cabal
advent-of-code/second/src/: Main.hs
exercism/haskell/anagram/.exercism/: metadata.json
exercism/haskell/anagram/src/: Anagram.hs
exercism/haskell/bob/.exercism/: metadata.json
exercism/haskell/bob/src/: Bob.hs
exercism/haskell/clock/.exercism/: metadata.json
exercism/haskell/clock/src/: Clock.hs
exercism/haskell/leap/.exercism/: metadata.json
exercism/haskell/leap/src/: LeapYear.hs
exercism/haskell/luhn/.exercism/: metadata.json
exercism/haskell/luhn/src/: Luhn.hs
exercism/haskell/pangram/: pangram.cabal
exercism/haskell/pangram/.exercism/: metadata.json
exercism/haskell/pangram/src/: Pangram.hs
exercism/haskell/space-age/.exercism/: metadata.json
exercism/haskell/space-age/src/: SpaceAge.hs
gauss-reduction/: README.md  gauss-reduction.cabal
gauss-reduction/src/: Main.hs
hacker-rank/: BirthDayCandles.hs  CardsPermutation.hs  Diagonal.hs  Leaderboards.hs  MagicSquare.hs  MiniMaxSum.hs  NonDivisibleSubset.hs  PlusMinus.hs  Staircase.hs  TimeConversion.hs
haskell-book/applicatives/: README.md  applicatives.cabal
haskell-book/applicatives/.ghc/: ghci_history
haskell-book/applicatives/src/: Exercises.hs  ListApp.hs
haskell-book/applying-structure/: README.md  applying-structure.cabal
haskell-book/functors/: functors.cabal
haskell-book/functors/src/: Main.hs
haskell-book/hangman/: hangman.cabal
haskell-book/hangman/data/: dict.txt
haskell-book/hangman/src/: Main.hs
haskell-book/hangman/tests/: Tests.hs
haskell-book/hello/: hello.cabal
haskell-book/hello/exe/: Main.hs
haskell-book/hello/src/: Hello.hs
haskell-book/monads/: monads.cabal
haskell-book/monads/src/: Exercises.hs
haskell-book/monoids-semigroups/: Monoids.hs  Semigroups.hs  monoids.cabal
haskell-book/morse/: morse.cabal
haskell-book/morse/src/: Main.hs  Morse.hs
haskell-book/morse/tests/: tests.hs
haskell-book/parse/: parse.cabal
haskell-book/parse/src/: Fractions.hs  IniParse.hs  LogFile.hs  Main.hs  Marshalling.hs  SemVer.hs
haskell-book/reader/: ChapterExamples.hs  ReaderPractice.hs
haskell-book/state/: MyState.hs  RandomExample.hs
haskell-book/tests/: Addition.hs  CustomGen.hs  Exercises.hs  Idempotence.hs  addition.cabal
haskell-book/transformers/: Chapter.hs
haskell-book/traversable/: Traversable.hs
logic/: logic.cabal
logic/src/: Formula.hs
misc/: Gauss.hs  Parser.hs  Secd.hs
secd/: README.md  secd.cabal
secd/app/: Main.hs
state-monad/: CounterState.hs  StateMonad.hs
todo/: .gitignore  DB.todo  README.md  stack.yaml  todo.cabal
todo/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
todo/src/: Main.hs  Parser.hs
