name:                todo
version:             0.1.0.0
homepage:            https://github.com/githubuser/todo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Parser
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5,
                       trifecta,
                       parsers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable todo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.7 && < 5,
                       todo,
                       brick
