name:                todo
version:             0.1.0.0
author:              Ollenurb
maintainer:          brunello.mtt@gmail.com
build-type:          Simple
cabal-version:       2.4

executable todo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.7 && < 5,
                       vty,
                       trifecta,
                       parsers,
                       transformers

