name:                hangman
version:             0.1.0.0
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Matteo Brunello
maintainer:          brunello.mtt@gmail.com
copyright:           2021 Matteo Brunello
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  build-depends:       base
                     , hangman
                     , QuickCheck
  default-language:    Haskell2010
