-- addition.cabal
name:           monoids
version:        0.1.0.0
license:        LICENSE
author:         Matteo Brunello
category:       Text
build-type:     Simple
cabal-version:  >=1.10

library
    exposed-modules:      Semigroups
                        , Monoids
    ghc-options:          -Wall -fwarn-tabs
    build-depends:        base >= 4.7 && <5
                        , hspec
                        , QuickCheck
    hs-source-dirs:       .
    default-language:     Haskell2010
