name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
license-file:        LICENSE
author:              Matteo Brunello
maintainer:          brunello.mtt@gmail.com
copyright:           2021 Matteo Brunello
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable morse
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , morse
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs


test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  default-language:    Haskell2010

