name:                parse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/parse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable parse
  hs-source-dirs:      src
  main-is:             IniParse.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       trifecta,
                       hspec,
                       raw-strings-qq,
                       text,
                       containers,
                       bytestring,
                       aeson

